--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -6,6 +6,7 @@
 @use 'utils/colors';
 @use 'utils/mixins';
 @use 'utils/variables';
+@use 'utils/sheet-tokens';
 
 /* Global styles */
 @use 'global/window';
