--- a/templates/actor/header.hbs
+++ b/templates/actor/header.hbs
@@ -3,7 +3,7 @@
   <div class="grid grid-8col">
     <div class="flexcol grid-span-2">
       <img
-        class='eventide-actor__profile-img {{#if actor.flags.eventide-rp-system.activeTransformation}}eventide-actor__profile-img--disabled{{/if}}'
+        class='eventide-profile-image {{#if actor.flags.eventide-rp-system.activeTransformation}}eventide-profile-image--disabled{{/if}}'
         src='{{actor.img}}'
         {{#unless actor.flags.eventide-rp-system.activeTransformation}}
         data-edit='img'
@@ -42,313 +42,14 @@
         />
       </div>
 
-      {{! Primary resources row }}
-      <div class='resources grid grid-3col'>
-        <div class='erps-resource-box erps-resource-box--health'>
-          <div class='erps-resource-box__upper'>
-            <div class='erps-resource-box__label'>
-              {{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Resolve.Value.label'}}
-            </div>
-          </div>
-          <div class='erps-resource-box__lower'>
-            <input
-              type='text'
-              name='system.resolve.value'
-              value='{{system.resolve.value}}'
-              class='erps-resource-box__input'
-              data-dtype='Number'
-            />
-            <span class='erps-resource-box__separator'> / </span>
-            <input
-              type='text'
-              name='system.resolve.max'
-              value='{{system.resolve.max}}'
-              class='erps-resource-box__input'
-              data-dtype='Number'
-            />
-          </div>
-        </div>
+      {{> actor-primary-resources}}
 
-        <div class='erps-resource-box erps-resource-box--mana'>
-          <div class='erps-resource-box__upper'>
-            <div class='erps-resource-box__label'>
-              {{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Power.Value.label'}}
-            </div>
-          </div>
-          <div class='erps-resource-box__lower'>
-            <input
-              type='text'
-              name='system.power.value'
-              value='{{system.power.value}}'
-              class='erps-resource-box__input'
-              data-dtype='Number'
-            />
-            <span class='erps-resource-box__separator'> / </span>
-            <input
-              type='text'
-              name='system.power.max'
-              value='{{system.power.max}}'
-              class='erps-resource-box__input'
-              data-dtype='Number'
-            />
-          </div>
-        </div>
+      {{> actor-secondary-resources}}
 
-        <div class='erps-resource-box erps-resource-box--neutral'>
-          {{#if (eq actor.type 'character')}}
-            <div class='erps-resource-box__upper'>
-              <div class='erps-resource-box__label'>
-                {{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Level.label'}}
-              </div>
-            </div>
-            <div class='erps-resource-box__lower'>
-              <input
-                type='text'
-                name='system.attributes.level.value'
-                value='{{system.attributes.level.value}}'
-                class='erps-resource-box__input'
-                data-dtype='Number'
-              />
-            </div>
-          {{/if}}
-          {{#if (eq actor.type 'npc')}}
-            <div class='erps-resource-box__upper'>
-              <div class='erps-resource-box__label'>
-                {{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.CR.label'}} / {{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.XP.label'}}
-              </div>
-            </div>
-            <div class='erps-resource-box__lower'>
-              <input
-                type='text'
-                name='system.cr'
-                value='{{system.cr}}'
-                class='erps-resource-box__input'
-                data-dtype='Number'
-              />
-              <input
-                type='text'
-                disabled='true'
-                name='system.xp'
-                value='{{system.xp}}'
-                class='erps-resource-box__input'
-                data-dtype='Number'
-              />
-            </div>
-          {{/if}}
-        </div>
       </div>
 
-      {{! Secondary stats row }}
-      <div class='resources grid grid-4col'>
-        {{!-- <div class='erps-stat-box erps-stat-box--neutral'>
-          <div class='erps-stat-box__label'>Initiative</div>
-          <div class='resource-content flexrow flex-center flex-between'>
-            <input
-              type='text'
-              name='system.statTotal.mainInit'
-              value='{{system.statTotal.mainInit}}'
-              data-dtype='Number'
-              title="Main Initiative"
-            />
-            <span>/</span>
-            <input
-              type='text'
-              name='system.statTotal.subInit'
-              value='{{system.statTotal.subInit}}'
-              data-dtype='Number'
-              title="Sub Initiative"
-            />
-          </div>
-        </div> --}}
-
-        <div class='erps-stat-box erps-stat-box--neutral'>
-          <div class='erps-stat-box__upper'>
-            <div class='erps-stat-box__label'>Dice Pool</div>
-          </div>
-          <div class='erps-stat-box__lower'>
-            <span class="erps-stat-box__value" title="Available Dice (Derived)">
-              {{system.hiddenAbilities.dice.total}}
-            </span>
-          </div>
-        </div>
-
-        <div class='erps-stat-box erps-stat-box--neutral'>
-          <div class='erps-stat-box__upper'>
-            <div class='erps-stat-box__label'>Fail Range</div>
-          </div>
-          <div class='erps-stat-box__lower'>
-            <span class="erps-stat-box__value" title="Fail Minimum (Derived)">
-              {{system.hiddenAbilities.fmin.total}}
-            </span>
-            <span class="erps-stat-box__separator">-</span>
-            <span class="erps-stat-box__value" title="Fail Maximum (Derived)">
-              {{system.hiddenAbilities.fmax.total}}
-            </span>
-          </div>
-        </div>
-
-        <div class='erps-stat-box erps-stat-box--neutral'>
-          <div class='erps-stat-box__upper'>
-            <div class='erps-stat-box__label'>Crit Range</div>
-          </div>
-          <div class='erps-stat-box__lower'>
-            <span class="erps-stat-box__value" title="Critical Minimum (Derived)">
-              {{system.hiddenAbilities.cmin.total}}
-            </span>
-            <span class="erps-stat-box__separator">-</span>
-            <span class="erps-stat-box__value" title="Critical Maximum (Derived)">
-              {{system.hiddenAbilities.cmax.total}}
-            </span>
-          </div>
-        </div>
-
-        <div class='erps-stat-box erps-stat-box--neutral'>
-          <div class='erps-stat-box__upper'>
-            <div class='erps-stat-box__label'>Stat Total</div>
-          </div>
-          <div class='erps-stat-box__lower'>
-            <span class="erps-stat-box__value" title="Total Stat Points (Derived)">
-              {{system.statTotal.value}}
-            </span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    {{! Ability Cards Column - Given more space }}
-    <div class='header-abilities flexcol grid-span-2'>
-      {{#each system.abilities as |ability key|}}
-        <div class="eventide-ability-card eventide-ability-card--{{key}} rollable"
-             data-ability="{{key}}"
-             data-action='roll'
-             data-type="{{key}}"
-             data-roll='{{lookup ../formulas key}}'
-             data-label='{{localize (lookup @root.config.abilities key)}}'
-             title="Roll {{localize (lookup @root.config.abilities key)}} ({{numberFormat ability.total decimals=0 sign=true}})">
-          <div class="eventide-ability-card__content">
-            <div class="eventide-ability-card__header">
-              <span class="eventide-ability-card__label" title="{{localize (lookup @root.config.abilities key)}}">
-                {{#if (eq key "acro")}}{{localize (lookup @root.config.abilityAbbreviations key)}}{{/if}}
-                {{#if (eq key "phys")}}{{localize (lookup @root.config.abilityAbbreviations key)}}{{/if}}
-                {{#if (eq key "fort")}}{{localize (lookup @root.config.abilityAbbreviations key)}}{{/if}}
-                {{#if (eq key "will")}}{{localize (lookup @root.config.abilityAbbreviations key)}}{{/if}}
-                {{#if (eq key "wits")}}{{localize (lookup @root.config.abilityAbbreviations key)}}{{/if}}
-              </span>
-            </div>
-            <div class="eventide-ability-card__stats">
-              <input
-                type='text'
-                name='system.abilities.{{key}}.value'
-                value='{{ability.value}}'
-                class="eventide-ability-card__input"
-                data-dtype='Number'
-                onclick="event.stopPropagation();"
-              />
-              <button class="eventide-ability-card__total-button rollable"
-                      data-action='roll'
-                      data-type="{{key}}"
-                      data-roll='{{lookup ../formulas key}}'
-                      data-label='{{localize (lookup @root.config.abilities key)}}'
-                      title="Roll {{localize (lookup @root.config.abilities key)}} ({{numberFormat ability.total decimals=0 sign=true}})">
-                {{numberFormat ability.total decimals=0 sign=true}}
-              </button>
-            </div>
-            <div class="eventide-ability-card__status">
-              {{#if ability.override}}
-                <i class="fas fa-lock eventide-ability-card__lock"></i>
-              {{else}}
-                <i class="fas fa-unlock-alt eventide-ability-card__unlock"></i>
-              {{/if}}
-            </div>
-          </div>
-        </div>
-      {{/each}}
-    </div>
+    {{> actor-abilities}}
   </div>
 
-  {{! Status indicators bar - moved to bottom of entire header }}
-  <div class="eventide-header__status-bar">
-    {{! Transformation Effect Card - moved here as requested }}
-    {{#if actor.flags.eventide-rp-system.activeTransformation}}
-      <div class="eventide-transformation-card {{#if actor.flags.eventide-rp-system.activeTransformationCursed}}eventide-transformation-card--cursed{{/if}}"
-           data-drag="true"
-           data-item-id="{{activeTransformation._id}}"
-           data-document-class="Item"
-           title="{{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Transformation.DragHint'}}">
-        <div class="eventide-transformation-card__header">
-          <div class="eventide-transformation-card__icon">
-            <i class="{{#if actor.flags.eventide-rp-system.activeTransformationCursed}}fas fa-skull{{else}}fas fa-magic{{/if}}"></i>
-          </div>
-          <div class="eventide-transformation-card__info">
-            <span class="eventide-transformation-card__label">
-              {{#if actor.flags.eventide-rp-system.activeTransformationCursed}}Cursed Transformation{{else}}Active Transformation{{/if}}
-            </span>
-            <span class="eventide-transformation-card__name">{{actor.flags.eventide-rp-system.activeTransformationName}}</span>
-          </div>
-          {{#if (and editable (or (not actor.flags.eventide-rp-system.activeTransformationCursed) @root.isGM))}}
-            <button class="eventide-transformation-card__revert" data-action="removeTransformation" title="{{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Transformation.Remove'}}">
-              <i class="fas fa-compress-alt"></i>
-            </button>
-          {{else}}
-            <div class="eventide-transformation-card__locked" title="{{localize 'EVENTIDE_RP_SYSTEM.Actor.Attributes.Transformation.Remove'}}">
-              <i class="fas fa-lock"></i>
-            </div>
-          {{/if}}
-        </div>
-      </div>
-    {{/if}}
-    {{! Show cursed items warning if any equipped cursed gear }}
-    {{#if (hasCursedItems equippedGear)}}
-      <div class="eventide-cursed-card eventide-cursed-card--warning">
-        <div class="eventide-cursed-card__header">
-          <div class="eventide-cursed-card__icon">
-            <i class="fas fa-skull-crossbones"></i>
-          </div>
-          <div class="eventide-cursed-card__info">
-            <span class="eventide-cursed-card__label">Cursed Items</span>
-            <span class="eventide-cursed-card__details">Equipped Cursed Gear</span>
-          </div>
-          <div class="eventide-cursed-card__warning">
-            <i class="fas fa-exclamation-triangle"></i>
-          </div>
-        </div>
-      </div>
-    {{/if}}
-
-    {{! Show active effects count if any }}
-    {{#if (gt statuses.length 0)}}
-      <div class="eventide-effects-card eventide-effects-card--active">
-        <div class="eventide-effects-card__header">
-          <div class="eventide-effects-card__icon">
-            <i class="fas fa-magic"></i>
-          </div>
-          <div class="eventide-effects-card__info">
-            <span class="eventide-effects-card__label">Status Effects</span>
-            <span class="eventide-effects-card__details">{{statuses.length}} {{#if (eq statuses.length 1)}}Effect{{else}}Effects{{/if}} Active</span>
-          </div>
-          <div class="eventide-effects-card__indicator">
-            <i class="fas fa-star"></i>
-          </div>
-        </div>
-      </div>
-    {{/if}}
-
-    {{! Low resolve warning - enhanced card style }}
-    {{#if lowHealth}}
-      <div class="eventide-health-card eventide-health-card--critical">
-        <div class="eventide-health-card__header">
-          <div class="eventide-health-card__icon">
-            <i class="fas fa-heart-broken"></i>
-          </div>
-          <div class="eventide-health-card__info">
-            <span class="eventide-health-card__label">Critical Health</span>
-            <span class="eventide-health-card__details">{{system.resolve.value}}/{{system.resolve.max}} Resolve</span>
-          </div>
-          <div class="eventide-health-card__warning">
-            <i class="fas fa-exclamation-triangle"></i>
-          </div>
-        </div>
-      </div>
-    {{/if}}
-  </div>
+  {{> actor-status}}
 </header>
